--- a/pixel-wise-street-segmentation.bib
+++ b/pixel-wise-street-segmentation.bib
@@ -150,6 +150,18 @@ CPU and between 6.5× and 44× faster when compiled for the GPU. This paper illu
   Year                     = {2014}
 }
 
+@Article{scikit-learn,
+  Title                    = {Scikit-learn: Machine Learning in {P}ython},
+  Author                   = {Pedregosa, F. and Varoquaux, G. and Gramfort, A. and Michel, V.
+ and Thirion, B. and Grisel, O. and Blondel, M. and Prettenhofer, P.
+ and Weiss, R. and Dubourg, V. and Vanderplas, J. and Passos, A. and
+ Cournapeau, D. and Brucher, M. and Perrot, M. and Duchesnay, E.},
+  Journal                  = {Journal of Machine Learning Research},
+  Year                     = {2011},
+  Pages                    = {2825--2830},
+  Volume                   = {12}
+}
+
 @Article{SzegedyLJSRAEVR14,
   Title                    = {Going Deeper with Convolutions},
   Author                   = {Christian Szegedy and
