--- a/ch5-sst.tex
+++ b/ch5-sst.tex
@@ -1,8 +1,10 @@
 %!TEX root = pixel-wise-street-segmentation.tex
 
 \section{SST}\label{sec:sst}
-\Gls{sst} is a Python package hosted on \gls{PyPI} and developed on GitHub. It
-makes use of Lasagne (see \cref{sec:frameworks}).
+\Gls{sst} is a Python package hosted on \gls{PyPI} and developed on GitHub.
+It makes use of Lasagne (see \cref{sec:frameworks}). It was mainly developed
+during the course \enquote{Machine Learning Laboratory - Applications} at
+KIT by Sebastian Bittel, Vitali Kaiser, Marvin Teichmann and Martin Thoma.
 
 \subsection{Installation}
 \verb+sst+ can be installed via \verb+pip install sst+. To make the
