--- a/pixel-wise-street-segmentation.tex
+++ b/pixel-wise-street-segmentation.tex
@@ -1,6 +1,7 @@
 \documentclass[technote,a4paper]{IEEEtran}
 \usepackage{amssymb, amsmath} % needed for math
 
+
 \usepackage[a-1b]{pdfx}
 \usepackage{filecontents}
 \begin{filecontents*}{\jobname.xmpdata}
@@ -17,7 +18,8 @@
 \usepackage{parskip}
 \usepackage[pdftex,final]{graphicx}
 \usepackage{csquotes}
-\usepackage{braket}
+
+\usepackage{blindtext}\usepackage{braket}
 \usepackage{booktabs}
 \usepackage{multirow}
 \usepackage{pgfplots}
