ch3, ch5, ch7, pixel-wise-street-segmentation: changing structure of document

--- a/ch3-datasets.tex
+++ b/ch3-datasets.tex
@@ -1,6 +1,6 @@
 %!TEX root = pixel-wise-street-segmentation.tex
 
-\section{Data Sets}\label{sec:datasets}
+\subsection{Data Sets}\label{sec:datasets}
 The KITTI Road Estimation data set \cite{Fritsch2013} was used for training of
 the models and for obtaining the experimental results reported in
 \cref{sec:evaluation}.
