--- a/ch7-results.tex
+++ b/ch7-results.tex
@@ -8,6 +8,9 @@ models. Second, we compare our best one to the work of
 Mohan~\cite{Tarel2009} (which is ranked on place~1 at KITTI road
 segmentation~\cite{Tarel2009}). The KITTI Road Estimation data set is the basis
 of our experiments (see \cref{sec:datasets}). \\
+\input{ch3-datasets}
+
+\subsection{Metrics / Experiments}
 To be able to evaluate different approaches we used only the
 training data of the KITTI data set, as the ground truth for the test data is
 not publicly available. We splitted the training data beforehand 20 to 80
