--- a/ch5-sst.tex
+++ b/ch5-sst.tex
@@ -1,18 +1,18 @@
 %!TEX root = pixel-wise-street-segmentation.tex
 
-\section{SST}\label{sec:sst}
+\subsection{SST}\label{sec:sst}
 \Gls{sst} is a Python package hosted on \gls{PyPI} and developed on GitHub.
 It makes use of Lasagne (see \cref{sec:frameworks}). It was mainly developed
 during the course \enquote{Machine Learning Laboratory - Applications} at
 KIT by Sebastian Bittel, Vitali Kaiser, Marvin Teichmann and Martin Thoma.
 
-\subsection{Installation}
+\subsubsection{Installation}
 \verb+sst+ can be installed via \verb+pip install sst+. To make the
 installation as simple as possible, this does not install all requirements.
 \verb+sst selfcheck+ gives the user the possibility to check which packages
 are still required and manually install them.
 
-\subsection{Functionality}
+\subsubsection{Functionality}
 \verb+sst+ makes use of Python files for neural network definitions. Those
 models have to have a \verb+generate_nnet(feature_vectors)+ function which
 returns an object with a \verb+fit(features, labels)+ method, a
